--- a/zookeeper/简介.md
+++ b/zookeeper/简介.md
@@ -24,7 +24,7 @@
 
 ## 角色
 一个 ZooKeeper 集群同一时刻只会有一个 Leader，其他都是 Follower 或 Observer
-![image](https://github.com/Yerikshu/BigdataNote/tree/master/%E7%BB%84%E4%BB%B6/zookeeper/image/1.png)
+![image](https://github.com/Yerikshu/Components/blob/master/zookeeper/image/1.png)
 然而，ZooKeeper 默认只有 Leader 和 Follower 两种角色，没有 Observer 角色。为了使用 Observer 模式，在任何想变成Observer的节点的配置文件中加入:peerType=observer 并在所有 server 的配置文件中，配置成 observer 模式的 server 的那行配置追加 :observer
 
 ### 读写分工
@@ -34,7 +34,7 @@
 ### Session
 Session 是指客户端会话，在讲解客户端会话之前，我们先来了解下客户端连接。在ZooKeeper 中，一个客户端连接是指客户端和 ZooKeeper 服务器之间的TCP长连接。ZooKeeper 对外的服务端口默认是2181
 
-![image](https://github.com/Yerikshu/BigdataNote/tree/master/%E7%BB%84%E4%BB%B6/zookeeper/image/2.png)
+![image](https://github.com/Yerikshu/Components/blob/master/zookeeper/image/2.png)
 
 客户端启动时，首先会与服务器建立一个TCP连接，从第一次连接建立开始，客户端会话的生命周期也开始了，通过这个连接，客户端能够通过心跳检测和服务器保持有效的会话，也能够向 ZooKeeper 服务器发送请求并接受响应，同时还能通过该连接接收来自服务器的 Watch 事件通知。Session 的 SessionTimeout 值用来设置一个客户端会话的超时时间。当由于服务器压力太大、网络故障或是客户端主动断开连接等各种原因导致客户端连接断开时，只要在 SessionTimeout 规定的时间内能够重新连接上集群中任意一台服务器，那么之前创建的会话仍然有效。
 
@@ -99,7 +99,7 @@ graph LR
     - 数据长度 
     - 创建时间 
     - 修改时间
-![image](https://github.com/Yerikshu/BigdataNote/tree/master/%E7%BB%84%E4%BB%B6/zookeeper/image/3.png)
+![image](https://github.com/Yerikshu/Components/blob/master/zookeeper/image/3.png)
 - 具有文件，路径的双重特点
 
 # 访问控制
