show the result

--- a/spark/practice/001.md
+++ b/spark/practice/001.md
@@ -6,6 +6,26 @@
 1. 显示每个职业下的用户详细信息，显示为 (职业编号,(人的编号,性别,年龄,邮编),职业名)
 
 
+```
+职业数:21
+电影数:3883
+用户数:6040
+评分条数:1000209
+用户详情( 格式:(职业编号,(人的编号,性别,年龄,邮编),职业名)):
+(4,((25,M,18,01609),college/grad student))
+(4,((38,F,18,02215),college/grad student))
+(4,((39,M,18,61820),college/grad student))
+(4,((41,F,18,15116),college/grad student))
+(4,((47,M,18,94305),college/grad student))
+(4,((48,M,25,92107),college/grad student))
+(4,((52,M,18,72212),college/grad student))
+(4,((63,M,18,54902),college/grad student))
+(4,((68,M,18,53706),college/grad student))
+(4,((70,M,18,53703),college/grad student))
+合并后共有:6040条users记录
+```
+
+
 参考实现
 
 ```
